@@ -1,4 +1,4 @@
-package tukorea_2024_s3_10.eat_fit.global.config;
+package tukorea_2024_s3_10.eat_fit.security.config;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
@@ -13,12 +13,11 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import tukorea_2024_s3_10.eat_fit.domain.RefreshRepository;
-import tukorea_2024_s3_10.eat_fit.infrastructure.jwt.JwtUtil;
-import tukorea_2024_s3_10.eat_fit.infrastructure.security.handler.CustomSuccessHandler;
-import tukorea_2024_s3_10.eat_fit.infrastructure.jwt.JwtFilter;
-import tukorea_2024_s3_10.eat_fit.application.service.CustomOAuth2UserService;
+import tukorea_2024_s3_10.eat_fit.security.CustomOAuth2UserService;
+import tukorea_2024_s3_10.eat_fit.security.jwt.JwtUtil;
+import tukorea_2024_s3_10.eat_fit.security.security.handler.CustomSuccessHandler;
+import tukorea_2024_s3_10.eat_fit.security.jwt.JwtFilter;
 
-import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -45,7 +44,7 @@ public class SecurityConfig {
                         .successHandler(customSuccessHandler)
                 )
                 .authorizeHttpRequests((auth) -> auth
-                        .requestMatchers("/reissue").permitAll()
+                        .requestMatchers("/api/core/auth/refresh-token").permitAll()
                         .requestMatchers("/oauth2/**").permitAll() // 로그인 하지 않는 사용자들은 로그인 API만 호출 가능
                         .requestMatchers("/api/users").hasRole("GUEST") // GUEST 사용자는 /api/users만 호출 가능
                         .requestMatchers("/api/**").hasRole("USER") // USER 사용자는 온전한 서비스 이용 가능
@@ -62,11 +61,13 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:3000")); // 허용할 Origin
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Collections.singletonList("*")); // 모든 헤더 허용
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept")); // Authorization을 명시적으로 추가
+        configuration.addExposedHeader("Authorization"); // 클라이언트에서 Authorization 헤더를 접근할 수 있도록 노출
         configuration.setAllowCredentials(true); // 쿠키, 세션 인증 정보 허용
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
+
 }
